--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "devDependencies": {
     "axios": "^0.17",
     "cross-env": "^5.1",
+    "install": "^0.10.1",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "materialize-css": "^0.100.2",
-    "vue": "^2.1.10"
+    "npm": "^5.5.1",
+    "vue": "^2.1.10",
+    "vuetify": "^0.16.9"
+  },
+  "dependencies": {
+    "underscore": "^1.8.3"
   }
 }
