--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "devDependencies": {
     "axios": "^0.17",
+    "bootstrap": "^4.0.0-beta.2",
     "cross-env": "^5.1",
+    "firebase": "^4.6.1",
     "install": "^0.10.1",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "materialize-css": "^0.100.2",
     "npm": "^5.5.1",
+    "popper.js": "^1.12.6",
     "vue": "^2.1.10",
-    "vuetify": "^0.16.9"
+    "vuetify": "^0.16.9",
+    "vuex": "^3.0.1",
+    "vuex-localstorage": "^1.0.0"
   },
   "dependencies": {
     "underscore": "^1.8.3"
