--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
 		"vue": "^2.1.10",
 		"vuetify": "^0.16.9",
 		"vuex": "^3.0.1",
+		"underscore": "^1.8.3",
 		"vuex-localstorage": "^1.0.0"
 	},
 	"dependencies": {
-		"firebase": "^4.6.1",
-		"underscore": "^1.8.3"
 	}
 }
