--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-	"private": true,
-	"scripts": {
-		"dev": "npm run development",
-		"development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"watch-poll": "npm run watch -- --watch-poll",
-		"hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"prod": "npm run production",
-		"production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-	},
-	"devDependencies": {
-		"axios": "^0.17",
-		"bootstrap": "^4.0.0-beta.2",
-		"cross-env": "^5.1",
-		"firebase": "^4.6.1",
-		"install": "^0.10.1",
-		"laravel-mix": "^1.0",
-		"lodash": "^4.17.4",
-		"materialize-css": "^0.100.2",
-		"npm": "^5.5.1",
-		"popper.js": "^1.12.6",
-		"vue": "^2.1.10",
-		"vuetify": "^0.16.9",
-		"vuex": "^3.0.1",
-		"underscore": "^1.8.3",
-		"vuex-localstorage": "^1.0.0"
-	},
-	"dependencies": {
-	}
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "axios": "^0.17",
+    "bootstrap": "^4.0.0-beta.2",
+    "cross-env": "^5.1",
+    "firebase": "^4.6.1",
+    "install": "^0.10.1",
+    "laravel-mix": "^1.0",
+    "lodash": "^4.17.4",
+    "materialize-css": "^0.100.2",
+    "moment": "^2.19.1",
+    "npm": "^5.5.1",
+    "popper.js": "^1.12.6",
+    "underscore": "^1.8.3",
+    "vee-validate": "^2.0.0-rc.21",
+    "vue": "^2.1.10",
+    "vuetify": "^0.16.9",
+    "vuex": "^3.0.1",
+    "vuex-localstorage": "^1.0.0"
+  },
+  "dependencies": {}
 }
