--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/js/templates/web-apps/elearning/app.js": "/js/templates/web-apps/elearning/app.js",
     "/js/templates/websites/bizlight/app.js": "/js/templates/websites/bizlight/app.js",
     "/js/vuetify/app.js": "/js/vuetify/app.js",
     "/js/home-page/app.js": "/js/home-page/app.js",
