--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "axios": "^0.17",
     "bootstrap": "^4.0.0-beta.2",
     "cross-env": "^5.1",
+    "eslint": "^4.11.0",
+    "eslint-plugin-vue": "^3.14.0",
     "firebase": "^4.6.1",
+    "font-awesome": "^4.7.0",
     "install": "^0.10.1",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
