--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "popper.js": "^1.12.6",
     "underscore": "^1.8.3",
     "vee-validate": "^2.0.0-rc.21",
+    "video.js": "^6.4.0",
     "vue": "^2.1.10",
     "vuetify": "^0.16.9",
     "vuex": "^3.0.1",
