--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,12 @@
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "heroku/heroku-buildpack-php": "*",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~6.0",
-        "heroku/heroku-buildpack-php": "*"
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "classmap": [
