--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "axios": "^0.17",
     "bootstrap": "^4.0.0-beta.2",
+    "buefy": "^0.6.1",
+    "bulma": "^0.6.1",
     "cross-env": "^5.1",
     "eslint": "^4.11.0",
     "eslint-plugin-vue": "^3.14.0",
