--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^4.6.1",
     "font-awesome": "^4.7.0",
     "install": "^0.10.1",
+    "js-search": "^1.4.2",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "materialize-css": "^0.100.2",
