Add Bulma's Layout, Navbar and sidebar For E-learning template

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,13 @@
 {
     "/js/templates/web-apps/elearning/app.js": "/js/templates/web-apps/elearning/app.js",
     "/js/templates/websites/bizlight/app.js": "/js/templates/websites/bizlight/app.js",
-    "/js/vuetify/app.js": "/js/vuetify/app.js",
+    "/js/bulma/app.js": "/js/bulma/app.js",
     "/js/home-page/app.js": "/js/home-page/app.js",
     "/css/home-page/app.css": "/css/home-page/app.css",
     "/css/vuetify/app.css": "/css/vuetify/app.css",
+    "/css/bulma/app.css": "/css/bulma/app.css",
     "/css/templates/websites/bizlight/app.css": "/css/templates/websites/bizlight/app.css",
     "/css/templates/portfolios/theme1/app.css": "/css/templates/portfolios/theme1/app.css",
+    "/js/vuetify/app.js": "/js/vuetify/app.js",
     "/js/templates/portfolios/theme1/app.js": "/js/templates/portfolios/theme1/app.js"
 }
