--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "video.js": "^6.4.0",
     "vue": "^2.1.10",
     "vue-froala-wysiwyg": "^2.7.3",
-    "vuetify": "^0.16.9",
+    "vuetify": "^1.0.0-alpha.3",
     "vuex": "^3.0.1",
     "vuex-localstorage": "^1.0.0"
   },
