--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
+        "codedungeon/phpunit-result-printer": "^0.4.4",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "heroku/heroku-buildpack-php": "*",
