--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
   "scripts": {
-    "dev": "npm run development",
+    "dev": "yarn run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "npm run watch -- --watch-poll",
+    "watch-poll": "yarn run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
+    "prod": "yarn run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
@@ -20,12 +20,14 @@
     "firebase": "^4.6.1",
     "font-awesome": "^4.7.0",
     "install": "^0.10.1",
+    "jquery": "^3.2.1",
     "js-search": "^1.4.2",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
+    "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
+    "mdi": "^2.1.19",
     "moment": "^2.19.1",
-    "npm": "^5.5.1",
     "popper.js": "^1.12.6",
     "underscore": "^1.8.3",
     "vee-validate": "^2.0.0-rc.21",
