Update Helpers && Controllers, Update ELearning template: finish Course-Lesson CRUD & Start on Articles

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "devDependencies": {
     "axios": "^0.17",
     "bootstrap": "^4.0.0-beta.2",
-    "buefy": "^0.6.1",
-    "bulma": "^0.6.1",
+    "buefy": "^0.6.2",
+    "bulma": "^0.6.2",
     "cross-env": "^5.1",
     "eslint": "^4.11.0",
     "eslint-plugin-vue": "^3.14.0",
@@ -24,6 +24,7 @@
     "js-search": "^1.4.2",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
+    "marked": "^0.3.12",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
     "mdi": "^2.1.19",
@@ -32,7 +33,7 @@
     "underscore": "^1.8.3",
     "vee-validate": "^2.0.0-rc.21",
     "video.js": "^6.4.0",
-    "vue": "^2.1.10",
+    "vue": "^2.5.13",
     "vue-froala-wysiwyg": "^2.7.3",
     "vuetify": "^1.0.0-alpha.3",
     "vuex": "^3.0.1",
