--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "buefy": "^0.6.2",
     "bulma": "^0.6.2",
+    "clarifai": "^2.6.0",
     "cross-env": "^5.1",
     "eslint": "^4.11.0",
     "eslint-plugin-vue": "^3.14.0",
@@ -29,6 +30,7 @@
     "materialize-css": "^0.100.2",
     "mdi": "^2.1.19",
     "moment": "^2.19.1",
+    "node-fs": "^0.1.7",
     "popper.js": "^1.12.6",
     "underscore": "^1.8.3",
     "vee-validate": "^2.0.0-rc.21",
