--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "ajthinking/tinx": "^2.1",
         "devmarketer/easynav": "^1.0",
         "devmarketer/laraflash": "^1.3",
         "fideloper/proxy": "~3.3",
